# Megano-MarketPlace-Django

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requiments.txt  requirements.txt
megano/: README.md  requirements.txt
megano/api/: admin.py  basket.py  models.py  serializers.py  urls.py  views.py
megano/api/migrations/: 0001_initial.py  0002_alter_category_image_alter_product_images_and_more.py  0003_alter_category_options_alter_subcategory_options_and_more.py  0004_alter_product_full_description_alter_product_reviews_and_more.py  0005_remove_category_subcategories_and_more.py  0006_alter_category_parent_category.py  0007_alter_product_reviews_alter_product_specifications_and_more.py  0008_remove_category_parent_category_and_more.py  0009_remove_category_subcategories_category_parent.py  0010_image_alter_category_image_alter_product_images_and_more.py  0011_remove_product_rating_remove_product_reviews_and_more.py  0012_alter_product_specifications.py  0013_rename_free_delivery_product_freedelivery_and_more.py  0014_alter_product_specifications_remove_product_tags_and_more.py  0015_remove_product_images_product_images.py  0016_alter_product_date.py  0017_alter_review_date.py  0018_alter_product_tags.py  0019_alter_product_specifications.py  0020_alter_review_author.py  0021_alter_profile_user.py  0022_profile_fullname_alter_profile_phone.py  0023_alter_image_alt.py  0024_alter_review_author.py  0025_profile_email.py  0027_product_product_sold.py  (+21 more)
megano/fixtures/: fixture.json
megano/megano/: settings.py  urls.py
(+4 files in other folders)
