[tool.poetry]
name = "python-django-diploma-dpo"
version = "0.1.0"
description = ""
authors = ["Alexey Inkov <alexo982@mail.ru>"]
readme = "README.md"
packages = [{include = "python_django_diploma_dpo"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.1"
django-filter = "23.2"
djangorestframework = "3.14.0"
Pillow = "9.5.0"
markdown = "3.4.3"
gunicorn = "20.1.0"
diploma-frontend = {path = "diploma-frontend/dist/diploma-frontend-0.6.tar.gz"}
django-debug-toolbar = "4.1.0"
setuptools = "68.0.0"
asgiref = "3.7.2"
sqlparse = "0.4.4"
tzdata = "2023.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
